Change look of Age box when no input

--- a/demo/index.html
+++ b/demo/index.html
@@ -51,7 +51,7 @@
     
     <div class="ui-input-container ui-input-container-adultcheck">
         <label class="ui-input-description">Age</label>
-        <span id="dot-valid-age" class="ui-input" type="text"></span>
+        <span id="dot-valid-age" class="ui-input dot-age-inactive" type="text"></span>
         <span class="validation-dot"></span>
     </div>
     
